new feature of lazyload components demo added

--- a/index.html
+++ b/index.html
@@ -1,19 +1,36 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>PracticeProject</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+
+  <!-- Materials Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <script defer src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <script defer src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+    
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
-<script src="runtime-es2015.993ec2237ea5fdddbf19.js" type="module"></script><script src="runtime-es5.993ec2237ea5fdddbf19.js" nomodule defer></script><script src="polyfills-es5.341d48ffc88eaeae911d.js" nomodule defer></script><script src="polyfills-es2015.95bb65e853d2781ac3bd.js" type="module"></script><script src="styles-es2015.5861dcac1e50434e7a1e.js" type="module"></script><script src="styles-es5.5861dcac1e50434e7a1e.js" nomodule defer></script><script src="main-es2015.1a249bfb64287055e489.js" type="module"></script><script src="main-es5.1a249bfb64287055e489.js" nomodule defer></script></body>
+<script src="runtime-es2015.ca2a3860f346db4cdbbe.js" type="module"></script><script src="runtime-es5.ca2a3860f346db4cdbbe.js" nomodule defer></script><script src="polyfills-es5.140e771a37f5fbdec635.js" nomodule defer></script><script src="polyfills-es2015.9a57001dd9671e1ec8b7.js" type="module"></script><script src="styles-es2015.bd230c145708baa74cb3.js" type="module"></script><script src="styles-es5.bd230c145708baa74cb3.js" nomodule defer></script><script src="main-es2015.d70657ea0d97bb61e166.js" type="module"></script><script src="main-es5.d70657ea0d97bb61e166.js" nomodule defer></script></body>
+
 </html>
